# deified

./: .gitmodules  BUILDING.md  CMakeLists.txt  LICENSE.txt  README.md
include/: compat.h  config.h  interfaces-rx.h  interfaces-tx.h  messages-verifier.h  messages.h  runtime.h  stats.h
interfaces/: model-rx.cpp  model.h
kernel/: CMakeLists.txt  Kbuild  hooks.c  hooks.h  hq-interface.c  hq-interface.h  hq.h  interface-ipc.c  interface-ipc.h  interface-stats.c  verifier.c  verifier.h
kernel/fds/: CMakeLists.txt  Kbuild  compat.h  fds.c  fds.h
llvm/: CMakeLists.txt  cfi-finalize.cpp  cfi-instrument.cpp  cfi-instrument.h  dfi-init.cpp  dfi-init.h  dfi-instrument.cpp  dfi-instrument.h  hq-init.cpp  hq-syscall.cpp  utils.cpp  utils.h
rtlib/: CMakeLists.txt  init.cpp  rtlib.cpp  rtlib.h
scripts/: setup.sh
tests/: CMakeLists.txt  general-annotate.cpp  general.cpp  rtt.cpp  threads.cpp
verifier/: CMakeLists.txt  child-verifier.cpp  main.cpp  process.cpp  process.h  verifier.h
